マイリスト削除用エンドポイントを実装 #17
